# siteone-crawler

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README-MCP.md  README.md  composer.json  crawler  crawler.bat  crawler.php  mcp  mcp.bat  package.json  phpstan.neon  phpunit.xml  run.tests-with-watch.sh  run.tests.sh  rust-toolchain.toml  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml  release.yml
Crawler/: AssetType.php  CoreOptions.php  Crawler.php  Debugger.php  DeviceType.php  ExtraColumn.php  FoundUrl.php  FoundUrls.php  HtmlReport.php  Info.php  Initiator.php  Mailer.php  Manager.php  Options.php  ParsedUrl.php  Utils.php
Crawler/Analysis/: AccessibilityAnalyzer.php  AnalysisManager.php  Analyzer.php  BaseAnalyzer.php  ContentTypeAnalyzer.php  FastestAnalyzer.php  Page404Analyzer.php  RedirectsAnalyzer.php  SlowestAnalyzer.php  SourceDomainsAnalyzer.php
Crawler/Analysis/Result/: AnalyzerStats.php  UrlAnalysisResult.php
Crawler/Components/: SuperTable.php  SuperTableColumn.php
Crawler/Export/: BaseExporter.php  Exporter.php  FileExporter.php  MailerExporter.php  OfflineWebsiteExporter.php  SitemapExporter.php
Crawler/Export/OfflineExporter/: OfflineResource.php
Crawler/Export/Utils/: OfflineUrlConverter.php  TargetDomainRelation.php
Crawler/HttpClient/: HttpClient.php  HttpResponse.php
Crawler/Options/: Option.php  Options.php  Type.php
Crawler/Output/: FormattedTextOutput.php  JsonOutput.php  MultiOutput.php  Output.php  OutputType.php  TextOutput.php
Crawler/Parser/: HtmlUrlParser.php
Crawler/Result/: BasicStats.php  Status.php  VisitedUrl.php
Crawler/Result/Storage/: FileStorage.php  MemoryStorage.php  Storage.php
Crawler/Result/Summary/: Item.php  ItemStatus.php  Summary.php
docs/: JSON-OUTPUT.md  OUTPUT-crawler.siteone.io.json  OUTPUT-crawler.siteone.io.txt  TEXT-OUTPUT.md
src/: autoload.php  crawler.php  debugger.rs  error.rs  extra_column.rs  info.rs  lib.rs  main.rs  mcp-server.php  server.rs  types.rs  utils.rs  version.rs  ws-server.php
src/Crawler/: AssetType.php  CoreOptions.php  Crawler.php  Debugger.php  DeviceType.php  ExtraColumn.php  FoundUrl.php  FoundUrls.php  HtmlReport.php  Info.php  Initiator.php  Manager.php  ParsedUrl.php  Utils.php  Version.php
src/Crawler/Analysis/: AccessibilityAnalyzer.php  AnalysisManager.php  Analyzer.php  BaseAnalyzer.php  BestPracticeAnalyzer.php  CachingAnalyzer.php  ContentTypeAnalyzer.php  DnsAnalyzer.php  FastestAnalyzer.php  HeadersAnalyzer.php  Manager.php  Page404Analyzer.php  RedirectsAnalyzer.php  SecurityAnalyzer.php  SeoAndOpenGraphAnalyzer.php  SeoAndSocialAnalyzer.php  SkippedUrlsAnalyzer.php  SlowestAnalyzer.php  SourceDomainsAnalyzer.php  SslTlsAnalyzer.php
src/Crawler/Components/: SuperTable.php  SuperTableColumn.php
src/Crawler/ContentProcessor/: AstroProcessor.php  BaseProcessor.php  ContentProcessor.php  CssProcessor.php  HtmlProcessor.php  JavaScriptProcessor.php  Manager.php  NextJsProcessor.php  (+2 more)
src/Mcp/: CrawlerExecutor.php  ErrorHandler.php  JsonRpcHandler.php  Logger.php  McpServer.php  ToolRegistry.php
src/ai/: client.rs  config.rs  mod.rs  normalize.rs  page.rs  prompt.rs  provider.rs  runner.rs  secret.rs  selection.rs  usage.rs
src/analysis/: accessibility_analyzer.rs  analyzer.rs  base_analyzer.rs  best_practice_analyzer.rs  browser_console_analyzer.rs  caching_analyzer.rs  content_type_analyzer.rs  dns_analyzer.rs  external_links_analyzer.rs  fastest_analyzer.rs  headers_analyzer.rs  manager.rs  mod.rs  page404_analyzer.rs  redirects_analyzer.rs  security_analyzer.rs  seo_opengraph_analyzer.rs  skipped_urls_analyzer.rs  slowest_analyzer.rs  source_domains_analyzer.rs  ssl_tls_analyzer.rs
src/browser/: cookie_consent.rs  diagnostics.rs  launcher.rs  mod.rs  renderer.rs  screenshot.rs
src/components/: mod.rs  super_table.rs  super_table_column.rs
src/content_processor/: astro_processor.rs  base_processor.rs  content_processor.rs  css_processor.rs  html_processor.rs  javascript_processor.rs  manager.rs  mod.rs  nextjs_processor.rs  svelte_processor.rs  xml_processor.rs
src/engine/: crawler.rs  fetcher.rs  found_url.rs  found_urls.rs  http_client.rs  http_response.rs  initiator.rs  manager.rs  mod.rs  parsed_url.rs  robots_txt.rs
src/export/: animation_exporter.rs  base_exporter.rs  exporter.rs  file_exporter.rs  mailer_exporter.rs  markdown_exporter.rs  mod.rs  offline_website_exporter.rs  sitemap_exporter.rs  upload_exporter.rs
src/options/: core_options.rs  group.rs  mod.rs  option.rs  option_type.rs  options.rs
src/output/: json_output.rs  mod.rs  multi_output.rs  output.rs  output_type.rs  text_output.rs
src/result/: basic_stats.rs  manager_stats.rs  mod.rs  status.rs  visited_url.rs
src/scoring/: ci_gate.rs  mod.rs  quality_score.rs  scorer.rs
src/wizard/: form.rs  mod.rs  presets.rs
tests/: DnsTest.php  OfflineUrlConverterTest.php  OfflineWebsiteExporterTest.php  TargetDomainRelationTest.php  UtilsTest.php  ai_live.rs  integration_crawl.rs
tests/Integration/: CrawlerExecutorTest.php
tests/Unit/: JsonRpcHandlerTest.php
tests/common/: mod.rs
(+111 files in other folders)
